deploy/kubernetes/tinyidp-jitsi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tinyidp-jitsi
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
